<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActualizarActivity">
    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|top">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvNombre"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvEspecie"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvGenero"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvHuesped"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvFotosColecta"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_input_add" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_input_add" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvFecha"
            />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="dd/mm/aaaa"
            android:ems="10"
            android:inputType="date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/tvHuesped" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:id="@+id/btn_Actualizar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/green"
            android:text="@string/btnGuardar"
            />
    </LinearLayout>
</ScrollView>