<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActualizarActivity">


    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|top">
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"></View>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/user"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvNombre"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvCorreo"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/tvTelefono"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></View>
        <Button
            android:id="@+id/btn_GuardarUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_200"
            android:text="@string/btnGuardar"
            />
    </LinearLayout>
</ScrollView>